# wban-deployment-opt

./: README.md  pyproject.toml  requirements.txt
data/: gw_positions.json  points_body.csv  scenarios.yaml
results/csv/: runs.csv
scripts/: make_plots.py  run_experiments.py
src/wban_opt/: assignment.py  config.py  energy_model.py  geometry.py  mealpy_runner.py  metrics.py  objective.py  penalties.py  plotting.py  repair.py
src/wban_opt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_objective.py  test_repair.py
